@@ -10,6 +10,7 @@
       generous donation which made this behavior possible)
     * IMPORTANT: ctrl-x/a never take possible negative URLs into account, it was just
       too unpredictable
+    * add :pagestyle command to allow for switching between alternate style sheets
     * add :b# to select the alternate buffer
     * add :tabduplicate command 
     * new 'urlseparator' option for specifying the regexp used to split the arg to
